--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "app"
 dynamic = ["version"]
 description = ''
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.12"
 license = "MIT"
 keywords = []
 authors = [
@@ -34,7 +34,18 @@ Source = "https://github.com/Ugur Emre Dogan/app"
 [tool.hatch.version]
 path = "src/app/__about__.py"
 
+[tool.hatch.envs.default]
+# Default environment settings
+python = "3.12"
+installer = "uv"
+path = ".venv"
+
+[tool.hatch.envs.default.scripts]
+# Default environment scripts for development and database operations
+dev = "fastapi dev {args:src/app/main.py}"
+
 [tool.hatch.envs.types]
+installer = "uv"
 extra-dependencies = [
   "mypy>=1.0.0",
 ]
