Added environment file and import data from it.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ classifiers = [
 dependencies = [
   "fastapi[all]",
   "pre-commit>=4.1.0",
+  "python-dotenv>=1.0.1",
   "sqlalchemy>=2.0.38",
 ]
 
